# iri_depth_tracker

./: CMakeLists.txt  README.md  manifest.xml
.svn/: wc.db
include/: Optimal_affine_tracking_3d16_fast_realtime_initialize.h  Optimal_affine_tracking_3d16_fast_realtime_types.h  compute_prob1.h  diag.h  eye.h  gradient.h  image_warping.h  init_variables.h  log.h  meshgrid.h  mldivide.h  norm.h  quat2rot.h  rand.h  randn.h  repmat.h  resampling.h  round.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  sqrt.h
launch/: iri_depth_tracker.launch
src/: Optimal_affine_tracking_3d16_fast_realtime_data.cpp  Optimal_affine_tracking_3d16_fast_realtime_rtwutil.cpp  chol.cpp  diag.cpp  eig.cpp  expm.cpp  gradient.cpp  image_warping.cpp  log.cpp  mean.cpp  meshgrid.cpp  mrdivide.cpp  quat2rot.cpp  resampling.cpp  round.cpp  rtGetInf.cpp  sum.cpp
